[project]
name = "comfyui-model-workflows"
description = "Load model creator's workflow."
version = "1.0.2"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-model-workflows"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-model-workflows"
Icon = ""
